[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/game_board.gd" id="2"]
[ext_resource type="Script" path="res://scripts/tick_engine.gd" id="3"]
[ext_resource type="Script" path="res://scripts/spawn_manager.gd" id="4"]
[ext_resource type="Script" path="res://scripts/health_manager.gd" id="5"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="6"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 390.0
offset_bottom = 870.0
mouse_filter = 2
color = Color(0.992, 0.973, 0.91, 1)

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2")

[node name="TowerContainer" type="Node2D" parent="GameBoard"]

[node name="NumberContainer" type="Node2D" parent="GameBoard"]

[node name="EffectsContainer" type="Node2D" parent="GameBoard"]

[node name="TickEngine" type="Node" parent="."]
script = ExtResource("3")

[node name="SpawnManager" type="Node" parent="."]
script = ExtResource("4")

[node name="HealthManager" type="Node" parent="."]
script = ExtResource("5")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6")

[node name="HealthLabel" type="Label" parent="HUD"]
offset_left = 12.0
offset_top = 12.0
offset_right = 80.0
offset_bottom = 46.0
mouse_filter = 2
text = "100"
horizontal_alignment = 0
vertical_alignment = 1

[node name="QueueContainer" type="Control" parent="HUD"]
offset_left = 0.0
offset_top = 818.0
offset_right = 390.0
offset_bottom = 858.0
clip_contents = true
mouse_filter = 2

[node name="GameOverPanel" type="PanelContainer" parent="HUD"]
visible = false
offset_left = 75.0
offset_top = 350.0
offset_right = 315.0
offset_bottom = 490.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOverPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 236.0
offset_bottom = 136.0
alignment = 1

[node name="ResultLabel" type="Label" parent="HUD/GameOverPanel/VBoxContainer"]
text = "Level Complete!"
horizontal_alignment = 1

[node name="StarsLabel" type="Label" parent="HUD/GameOverPanel/VBoxContainer"]
text = ""
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="HUD/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
text = "Retry"
